# camda2021-dialogi

./: .gitignore  README.rst  pyproject.toml
dialogi/: classifiers.py  dialogi.py  embeddings.py  net_utils.py  pubtator.py  string_db.py  text_utils.py  utils.py
dialogi/data/camda_in/: valid-ds1.tsv
dialogi/data/embedded/: stop_words.csv
dialogi/data/model_out/pickle_jar/: docs-val1_public.pkl  pub-val1_public.pkl
public_results/: run_dialogi.py
